[package]
name = "bitmaya"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sha1 = "0.10.0"
reqwest = { version = "0.11.12", features = ["blocking"] }
url = "2.3.1"
form_urlencoded = "1.1.0"
rand = "0.7.2"
libc = "0.2.151"

[dependencies.mescal]
path = "../mescal"
